<resources>
    <string name="app_name">Remote HCS</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <string name="patient_info">Patient Info</string>
    <string name="visits">Visits</string>
    <string name="next_patient">Next Patient</string>
    <string name="new_visit">New Visit</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/next_patient</item>
        <item>@string/patient_info</item>
        <item>@string/visits</item>
        <item>@string/new_visit</item>
    </string-array>

    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="name">Name</string>
    <string name="fname">First name</string>
    <string name="lname">Last name</string>
    <string name="patient_id">Patient ID</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="marital_status">Marital Status</string>
    <string name="email">Email</string>
    <string name="Address">Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country_code">Country Code</string>
    <string name="home_phone">Home Phone</string>
    <string name="cell_phone">Cell Phone</string>

    <!--string for visit information -->
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="medical_history">Medical History</string>
    <string name="medical_conditions">Medical Conditions</string>
    <string name="height_weight">Height and Weight</string>
    <string name="glucose_test">Blood Sugar Test</string>
    <string name="bp_test">Blood Pressure Test</string>
    <string name="bps">Systolic Blood Pressure</string>
    <string name="bpd">Diastolic Blood Pressure</string>
    <string name="review_visit">Review Visit</string>
    <string name="upload">Upload</string>
    <string name="do_you_smoke">Do you smoke?</string>
    <string name="relatives_diabetes">Do any of your relatives suffer from diabetes?</string>
    <string name="relatives_hypertension">Do any of your relatives have a history of hypertension?</string>
    <string name="pregnant_question">Are you pregnant?</string>
    <string name="hypertension_question">Do you have a history of hypertension?</string>
    <string name="diabetes_question">Do you have a history of diabetes?</string>
    <string name="numbness_question">Do you often experience numbness?</string>
    <string name="dizziness_question">Do you often experience dizziness?</string>
    <string name="dry_mouth_question">Do you often experience dry mouth?</string>
    <string name="title_activity_search_for_patient">Search For Patient</string>
    <string name="begin_test">Begin Test</string>
    <string name="retest">Retest</string>
    <string name="blood_sugar">Blood Sugar</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="pulse">Pulse</string>
    <string name="smokes">Smokes</string>
    <string name="pregnant">Pregnant</string>
    <string name="bmi">BMI</string>
    <string name="dry_mouth">Experiencing Dry Mouth</string>
    <string name="dizziness">Experiencing Dizziness</string>
    <string name="numbness">Experiencing Numbness</string>
    <string name="hypertension">Previous diagnosis of hypertension</string>
    <string name="diabetes">Previous diagnosis of diabetes</string>
    <string name="family_hypertension">Family History of Hypertension</string>
    <string name="family_diabetes">Family History of Diabetes</string>
    <string name="glucose_instructions">Wash patients hands and fingers using alcohol.
        If you are using alcohol, let it dry before you prick your finger.
        Prick the site with a lancing device.
        Put a little drop of blood on a test strip.
        Follow the instructions for inserting the test strip and using the blood glucose meter.
        Dispose of lancing tip in sharps bin.
    </string>
    <string name="bp_instructions"> Make sure the patient is relaxed by allowing 5 minutes
        to relax before the first reading. The patient should sit upright with their upper arm
        positioned so it is level with their heart and feet flat on the floor. Remove excess
        clothing that might interfere with the BP cuff or constrict blood flow in the arm.
        Be sure you and the patient refrain from talking during the reading. Most measurement
        errors occur by not taking the time to choose the proper cuff size. Wrap the cuff around
        the patient\'s arm and use the INDEX line to determine if the patient\'s arm circumference
        falls within the RANGE area. Otherwise, choose the appropriate smaller or larger cuff.
    </string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>